fixing icons and banner problems

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tap30 Demo</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./fonts.css" />
-    <link
+    <link 
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
       integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -38,33 +38,7 @@
       </nav>
     </header>
     <section class="hero--section">
-      <picture>
-        <source
-          srcset="https://tapsi.ir/images/home/banner.webp"
-          type="image/webp"
-          media="(min-width: 768px)"
-        />
-        <source
-          srcset="https://tapsi.ir/images/home/banner.jpg"
-          type="image/jpg"
-          media="(min-width: 768px)"
-        />
-        <source
-          srcset="https://tapsi.ir/images/home/banner-mobile.webp"
-          type="image/webp"
-          media="(max-width: 768px)"
-        />
-        <source
-          srcset="https://tapsi.ir/images/home/banner-mobile.jpg"
-          type="image/jpg"
-          media="(max-width: 768px)"
-        />
-        <img
-          alt="banner"
-          src="https://tapsi.ir/images/home/banner.jpg"
-          class="banner-img"
-        />
-      </picture>
+      <img src="./assets/images/banner.jpg" alt="hero banner">
       <div class="hero--wrapper">
         <div class="intro--btn">
           <h1>تپسی</h1>
@@ -103,7 +77,7 @@
       <div class="services__tabs" id="nav-tab" role="tablist">
         <a class="tab active" data-tab-target="nav-classic-tab">
           <img
-            src="https://tapsi.ir/images/home/cc-classic.png"
+            src="./assets/icon/cc-classic.png"
             aria-label="classic service icon"
             alt="tapsi-classic-icon"
           />
@@ -111,7 +85,7 @@
         </a>
         <a class="tab" data-tab-target="nav-motopeyk-tab">
           <img
-            src="https://tapsi.ir/images/home/cc-motopeyk.png"
+            src="./assets/icon/cc-tel.png"
             aria-label="motopeyk service icon"
             alt="motopeyk-icon"
           />
@@ -119,7 +93,7 @@
         </a>
         <a class="tab" data-tab-target="nav-autopeyk-tab">
           <img
-            src="https://tapsi.ir/images/home/cc-autopeyk.png"
+            src="./assets/icon/cc-autopeyk.png"
             aria-label="autopeyk service icon"
             alt="autopeyk-icon"
           />
@@ -127,7 +101,7 @@
         </a>
         <a class="tab" data-tab-target="nav-plus-tab">
           <img
-            src="https://tapsi.ir/images/home/cc-plus.png"
+            src="./assets/icon/cc-plus.png"
             aria-label="plus service icon"
             alt="tapsi-plus-icon"
           />
@@ -135,7 +109,7 @@
         </a>
         <a class="tab" data-tab-target="nav-tel-tab">
           <img
-            src="https://tapsi.ir/images/home/cc-tel.png"
+            src="./assets/icon/cc-tel.png"
             aria-label="tel service icon"
             alt="tapsi-tel-icon"
           />
@@ -143,31 +117,15 @@
         </a>
         <a class="tab" data-tab-target="nav-hamyar-tab">
           <img
-            src="https://tapsi.ir/images/home/cc-hamyar.png"
+            src="./assets/icon/cc-hamyar.png"
             aria-label="hamyar service icon"
             alt="hamyar-icon"
           />
           <p>همیار</p>
         </a>
-        <a class="tab" data-tab-target="nav-hamkhat-tab">
-          <img
-            src="https://tapsi.ir/images/home/cc-hamkhat.png"
-            aria-label="hamkhat service icon"
-            alt="hamkhat-icon"
-          />
-          <p>هم&zwnj;خط</p>
-        </a>
-        <a class="tab" data-tab-target="nav-taxi-tab">
-          <img
-            src="https://tapsi.ir/images/home/cc-taxi.png"
-            aria-label="taxi service icon"
-            alt="tapsi-taxi-icon"
-          />
-          <p>تاکسی</p>
-        </a>
         <a class="tab" data-tab-target="nav-line-tab">
           <img
-            src="https://tapsi.ir/images/home/cc-line.png"
+            src="./assets/icon/cc-line.png"
             aria-label="line service icon"
             alt="tapsi-line-icon"
           />
@@ -704,8 +662,8 @@
           ><a href="#"></a><a href="#">دریافت API</a>
         </div>
         <div class="footer__item">
-          <img class="trust-logo" src="https://tapsi.ir/images/etehadiye.png" />
-          <img class="trust-logo" src="https://tapsi.ir/images/etehadiye.png" />
+          <img class="trust-logo" src="./assets/images/enemad.png" />
+          <img class="trust-logo" src="./assets/images/logo.png" />
         </div>
       </div>
     </footer>
